force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/leaseworks__Credit_Memo_Issuance__c.object-meta.xml
<CustomObject>
    <label>MR Overpayment Distribution</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MR Overpayment Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>