force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <description>Amount that should be reduced from the source balance</description>
    <inlineHelpText>Amount that should be reduced from the source balance</inlineHelpText>
    <label>Z_Unused_2512 Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>