force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Number__c</fullName>
    <defaultValue>null</defaultValue>
    <description>The amount that should be deducted from the source balance.</description>
    <inlineHelpText>Amount that should be reduced from the source balance.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>