force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>