force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Memo__c</fullName>
    <label>Credit Memo</label>
    <referenceTo>leaseworks__Credit_Memo__c</referenceTo>
    <relationshipLabel>MR Overpayment Distributions</relationshipLabel>
    <relationshipName>Credit_Memo_Issuances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>