force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Lessee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_OP Lessee</label>
    <referenceTo>leaseworks__Operator__c</referenceTo>
    <relationshipName>Credit_Memo_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>