force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Lessee_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessee_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lessee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Memo Issuances</relationshipLabel>
    <relationshipName>Credit_Memo_Issuances_New</relationshipName>
    <type>Lookup</type>
</CustomField>