force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Supplemental_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Supplemental_Rent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Choose Supplemental Rent from where funds should be taken, if applicable</description>
    <inlineHelpText>Choose Supplemental Rent from where funds should be taken, if applicable</inlineHelpText>
    <label>Supplemental Rent</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>leaseworks__Assembly_MR_Rate__c.leaseworks__Lease__r.leaseworks__Lessee_New__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lessee_New__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Credit Memo Issuances</relationshipLabel>
    <relationshipName>Credit_Memo_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>