force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/fields/leaseworks__Utilization_Report_List_Item__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Utilization_Report_List_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent Utilization</label>
    <referenceTo>leaseworks__Utilization_Report_List_Item__c</referenceTo>
    <relationshipLabel>Credit Memo Issuances</relationshipLabel>
    <relationshipName>Credit_Memo_Issuances</relationshipName>
    <type>Lookup</type>
</CustomField>