force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/validationRules/leaseworks__PreventDistributionUpdateOnApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PreventDistributionUpdateOnApproved</fullName>
    <active>true</active>
    <description>Sum of the distribution amount should be equal to the Credit Memo amount.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
    NOT(ISPICKVAL(leaseworks__Credit_Memo__r.leaseworks__Status__c, &quot;Pending&quot;)),
    ISCHANGED(leaseworks__Amount_Number__c)
)</errorConditionFormula>
    <errorMessage>The total distribution amount must equal the amount stated on the Credit Memo.</errorMessage>
</ValidationRule>