force-app/main/default/objects/leaseworks__Credit_Memo_Issuance__c/validationRules/leaseworks__SupplementalRentIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__SupplementalRentIsRequired</fullName>
    <active>true</active>
    <description>Supplemental Rent is required</description>
    <errorConditionFormula>ISBLANK(leaseworks__Supplemental_Rent__c)</errorConditionFormula>
    <errorDisplayField>leaseworks__Supplemental_Rent__c</errorDisplayField>
    <errorMessage>Supplemental Rent is required.</errorMessage>
</ValidationRule>